[gd_scene load_steps=5 format=3 uid="uid://skjawqanqgt2"]

[ext_resource type="PackedScene" uid="uid://qe588423211k" path="res://player.tscn" id="1_afp3a"]
[ext_resource type="Script" path="res://survivors_game.gd" id="1_rmbkt"]
[ext_resource type="PackedScene" uid="uid://t3uy5fwt5pjq" path="res://pine_tree.tscn" id="2_bmpf8"]

[sub_resource type="Curve2D" id="Curve2D_ra84p"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -162, -105, 0, 0, 0, 0, -164, 1158, 0, 0, 0, 0, 2196, 1161, -5.98646, 17.9594, 5.98646, -17.9594, 2197, -97, 0, 0, 0, 0, -160, -105)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
position = Vector2(-39, 3)
script = ExtResource("1_rmbkt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player" parent="." instance=ExtResource("1_afp3a")]
position = Vector2(932, 602)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-932, -602)
curve = SubResource("Curve2D_ra84p")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-162, -105)
rotation = 1.57238

[node name="PineTree" parent="." instance=ExtResource("2_bmpf8")]
position = Vector2(744, 614)

[node name="PineTree2" parent="." instance=ExtResource("2_bmpf8")]
position = Vector2(924, 370)

[node name="PineTree10" parent="." instance=ExtResource("2_bmpf8")]
position = Vector2(456, 199)

[node name="PineTree3" parent="." instance=ExtResource("2_bmpf8")]
position = Vector2(1194, 995)

[node name="PineTree8" parent="." instance=ExtResource("2_bmpf8")]
position = Vector2(1399, 789)

[node name="PineTree4" parent="." instance=ExtResource("2_bmpf8")]
position = Vector2(1523, 475)

[node name="PineTree9" parent="." instance=ExtResource("2_bmpf8")]
position = Vector2(1762, 241)

[node name="PineTree5" parent="." instance=ExtResource("2_bmpf8")]
position = Vector2(394, 411)

[node name="PineTree6" parent="." instance=ExtResource("2_bmpf8")]
position = Vector2(432, 893)

[node name="PineTree7" parent="." instance=ExtResource("2_bmpf8")]
position = Vector2(213, 611)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="GameOverScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.937255)

[node name="GameOverText" type="Label" parent="GameOverScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -11.5
offset_right = 123.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "GAME OVER. SLIME SUPREMACY.
"

[connection signal="health_depeleted" from="Player" to="." method="_on_player_health_depeleted"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
